--- a/mybib.bib
+++ b/mybib.bib
@@ -92,3 +92,506 @@
   month={Feb},
   doi={10.1016/j.smrv.2020.101377}
 }
+
+@article{phan2022sleeptransformer,
+	author = {Phan, H. and Mikkelsen, K. B. and Chen, O. Y. and Koch, P. and Mertins, A. and De Vos, M.},
+	title = {SleepTransformer: Automatic Sleep Staging with Interpretability and Uncertainty Quantification},
+	journal = {IEEE Transactions on Biomedical Engineering},
+	year = {2022}
+}
+
+@article{dai2023multichannelsleepnet,
+	author = {Dai, Y. and Li, X. and Liang, S. and Wang, L. and Duan, Q. and Yang, H. and Zhang, C. and Chen, X. and Li, L. and Li, X. and Liao, X.},
+	title = {MultiChannelSleepNet: A Transformer-Based Model for Automatic Sleep Stage Classification With PSG},
+	journal = {IEEE Journal of Biomedical and Health Informatics},
+	year = {2023}
+}
+
+@article{guo2024flexsleeptransformer,
+	author = {Guo, Y. and Nowakowski, M. and Dai, W.},
+	title = {FlexSleepTransformer: A Transformer-Based Sleep Staging Model with Flexible Input Channel Configurations},
+	journal = {Scientific Reports},
+	year = {2024}
+}
+
+@article{yao2022cnntransformer,
+	author = {Yao, Z. and Liu, X.},
+	title = {A CNN-Transformer Deep Learning Model for Real-time Sleep Stage Classification in an Energy-Constrained Wireless Device},
+	journal = {medRxiv},
+	year = {2022}
+}
+
+@article{supratak2017deepsleepnet,
+	author = {Supratak, A. and Dong, H. and Wu, C. and Guo, Y.},
+	title = {DeepSleepNet: A Model for Automatic Sleep Stage Scoring Based on Raw Single-Channel EEG},
+	journal = {IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+	volume = {25},
+	number = {11},
+	pages = {1998--2008},
+	year = {2017}
+}
+
+@article{eldele2021attnsleep,
+	author = {Eldele, E. and Chen, Z. and Liu, C. and Wu, M. and Kwoh, C. and Li, X. and Guan, C.},
+	title = {AttnSleep: An Attention-Based Deep Learning Approach for Sleep Stage Classification With Single-Channel EEG},
+	journal = {IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+	year = {2021}
+}
+
+@article{ji2022jkstgcn,
+	author = {Ji, X. and Li, Y. and Wen, P.},
+	title = {Jumping Knowledge-Based Spatial-Temporal Graph Convolutional Networks for Automatic Sleep Stage Classification},
+	journal = {IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+	year = {2022}
+}
+
+@article{mousavi2019sleepeegnet,
+	author = {Mousavi, S. and Afghah, F. and Acharya, U. R.},
+	title = {SleepEEGNet: Automated Sleep Stage Scoring With Sequence-to-Sequence Deep Learning Approach},
+	journal = {PLOS ONE},
+	year = {2019}
+}
+
+@article{phan2019seqsleepnet,
+	author = {Phan, H. and et al.},
+	title = {SeqSleepNet: End-to-End Hierarchical Recurrent Neural Network for Sequence-to-Sequence Automatic Sleep Staging},
+	journal = {IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+	year = {2019}
+}
+
+@article{zhang2024cnntransformerconvlstm,
+	author = {Zhang, et al.},
+	title = {A CNN-Transformer-ConvLSTM-CRF Hybrid Network for Sleep Stage Classification},
+	journal = {IEEE Sensors Journal},
+	year = {2024}
+}
+
+@article{liu2024review,
+	author = {Liu, et al.},
+	title = {Automatic Sleep Stage Classification Using Deep Learning: Signals, Data Representation, and Neural Networks},
+	journal = {Artificial Intelligence Review},
+	year = {2024}
+}
+
+@misc{ctdal2022,
+	author = {CT-DAL},
+	title = {Convolutional Transformer with Domain Adversarial Learning for Multi-Channel Sleep Stage Classification},
+	note = {Available on Semantic Scholar},
+	year = {2022}
+}
+
+@article{pei2022hybrid,
+	author = {Pei, W. and Li, Y. and Siuly, S. and Wen, P.},
+	title = {A Hybrid Deep Learning Scheme for Multi-Channel Sleep Stage Classification},
+	journal = {Computers, Materials \& Continua},
+	year = {2022}
+}
+
+@article{mostafaei2024crossmodality,
+	author = {Mostafaei, S. H. and Tanha, J. and Sharafkhaneh, A.},
+	title = {A Novel Deep Learning Model Based on Transformer and Cross-Modality Attention for Classification of Sleep Stages},
+	journal = {Journal of Biomedical Informatics},
+	year = {2024}
+}
+
+@article{jeong2024explainablevit,
+	author = {Jeong, et al.},
+	title = {Explainable Vision Transformer for Automatic Visual Sleep Staging},
+	journal = {npj Digital Medicine},
+	year = {2024}
+}
+
+@article{pei2024mfcc,
+	author = {Pei, W. and Li, Y. and et al.},
+	title = {An Automatic Method Using MFCC Features for Sleep Stage Classification},
+	journal = {Biomedical Signal Processing and Control},
+	year = {2024}
+}
+
+@article{sors2018cnn,
+	author = {Sors, A. and Bonnet, S. and Mirek, S. and Payen, J.-F.},
+	title = {A Convolutional Neural Network for Sleep Stage Scoring from Raw Single-Channel EEG},
+	journal = {Biomedical Signal Processing and Control},
+	year = {2018}
+}
+
+@article{seo2020iitnet,
+	author = {Seo, H. and Back, S. and Lee, S. and Park, D. and Kim, T. and Lee, K.},
+	title = {Intra- and Inter-Epoch Temporal Context Network (IITNet) Using Sub-Epoch Features for Automatic Sleep Scoring on Raw Single-Channel EEG},
+	journal = {Biomedical Signal Processing and Control},
+	year = {2020}
+}
+
+@article{biswal2017sleepnet,
+	author = {Biswal, S. and et al.},
+	title = {SLEEPNET: Automated Sleep Staging System via Deep Learning},
+	journal = {Journal of the American Medical Informatics Association},
+	year = {2017}
+}
+
+@article{phan2018jointcnn,
+	author = {Phan, H. and et al.},
+	title = {Joint Classification and Prediction CNN Framework for Automatic Sleep Stage Classification},
+	journal = {IEEE Transactions on Biomedical Engineering},
+	year = {2018}
+}
+
+
+@article{tsinalis2016automatic,
+	title={Automatic sleep stage scoring using time-frequency analysis and stacked sparse autoencoders},
+	author={Tsinalis, Orestis and Matthews, Paul M and Guo, Yike},
+	journal={Annals of biomedical engineering},
+	volume={44},
+	number={5},
+	pages={1587--1597},
+	year={2016},
+	publisher={Springer}
+}
+
+@article{chambon2018deep,
+	title={A deep learning architecture for temporal sleep stage classification using multivariate and multimodal time series},
+	author={Chambon, Sylvain and Galtier, Maxime Nicolas and Arnal, Pierre Jacques and Wainrib, Gilles and Gramfort, Alexandre},
+	journal={IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+	volume={26},
+	number={4},
+	pages={758--769},
+	year={2018},
+	publisher={IEEE}
+}
+
+@article{perslev2021usleep,
+	title={U-Sleep: resilient high-frequency sleep staging},
+	author={Perslev, Mathias and Jennum, Poul J and Darkner, Sune and Igel, Christian},
+	journal={npj Digital Medicine},
+	volume={4},
+	number={1},
+	pages={72},
+	year={2021},
+	publisher={Nature Publishing Group}
+}
+
+@article{liang2020dnn,
+	title={A Deep Neural Network-Based Method for Automatic Sleep Stage Scoring Using Single-Channel EEG},
+	author={Liang, Zhipeng and Wang, Yuxiao and Sun, Xiaoying and Li, Hualei and Voss, Logan J.},
+	journal={Frontiers in Neuroscience},
+	volume={14},
+	year={2020},
+	publisher={Frontiers Media SA}
+}
+
+@article{rundo2019machine,
+	title={Machine learning approaches in sleep stage classification: A survey},
+	author={Rundo, Francesco and Conoci, Sabrina and Battiato, Sebastiano and Ortis, Alessandro},
+	journal={Electronics},
+	volume={8},
+	number={12},
+	pages={1493},
+	year={2019},
+	publisher={MDPI}
+}
+
+@article{dong2019multiview,
+	title={Multi-view deep learning for EEG-based sleep stage classification},
+	author={Dong, Honghan and Supratak, Akara and Pan, Wenjian and Wu, Chao and Guo, Yike},
+	journal={IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+	volume={27},
+	number={3},
+	pages={370--379},
+	year={2019},
+	publisher={IEEE}
+}
+
+@article{zhang2020novel,
+	title={A novel deep neural network model for sleep stage scoring using EEG time-frequency images},
+	author={Zhang, Yijun and Wu, Wei and Sun, Hu and Zhang, Wen and He, Xian},
+	journal={Biomedical Signal Processing and Control},
+	volume={57},
+	pages={101736},
+	year={2020},
+	publisher={Elsevier}
+}
+@article{supratak2017deepsleepnet,
+	title={DeepSleepNet: a model for automatic sleep stage scoring based on raw single-channel EEG},
+	author={Supratak, Akara and Dong, Hao and Wu, Chao and Guo, Yike},
+	journal={IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+	volume={25},
+	number={11},
+	pages={1998--2008},
+	year={2017},
+	publisher={IEEE}
+}
+
+@article{phan2019seqsleepnet,
+	title={SeqSleepNet: End-to-End Hierarchical Recurrent Neural Network for Sequence-to-Sequence Automatic Sleep Staging},
+	author={Phan, Huy and Andreotti, Fernando and Cooray, Navin and Ch{\'e}n, Oliver Y and De Vos, Maarten},
+	journal={IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+	volume={27},
+	number={3},
+	pages={400--410},
+	year={2019},
+	publisher={IEEE}
+}
+
+@article{tsinalis2016automatic,
+	title={Automatic sleep stage scoring using time-frequency analysis and stacked sparse autoencoders},
+	author={Tsinalis, Orestis and Matthews, Paul M and Guo, Yike},
+	journal={Annals of Biomedical Engineering},
+	volume={44},
+	number={5},
+	pages={1587--1597},
+	year={2016},
+	publisher={Springer}
+}
+
+@article{chambon2018deep,
+	title={A deep learning architecture for multi-class sleep stage scoring from single-channel EEG},
+	author={Chambon, Sylvain and Galtier, Mathieu N and Arnal, Pierre J and Wainrib, Gilles and Gramfort, Alexandre},
+	journal={IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+	volume={26},
+	number={4},
+	pages={758--769},
+	year={2018},
+	publisher={IEEE}
+}
+
+@article{perslev2021u,
+	title={U-Sleep: resilient high-frequency sleep staging},
+	author={Perslev, Mathias and Darkner, Sune and Kempfner, Jacob and Nikolic, Mladen and Jennum, Poul and Igel, Christian},
+	journal={npj Digital Medicine},
+	volume={4},
+	number={1},
+	pages={1--13},
+	year={2021},
+	publisher={Nature Publishing Group}
+}
+
+@article{liang2020deep,
+	title={Deep learning for automated feature discovery and classification of sleep stages},
+	author={Liang, Zhe and Florin, Esther and Herrmann, Christoph S and Voss, Andreas},
+	journal={IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+	volume={28},
+	number={3},
+	pages={782--792},
+	year={2020},
+	publisher={IEEE}
+}
+
+@article{rundo2019machine,
+	title={Machine learning for EEG-based sleep stage classification: A survey},
+	author={Rundo, Francesco and Trenta, Francesco and Ortis, Alessandro and Battiato, Sebastiano},
+	journal={IEEE Access},
+	volume={7},
+	pages={142421--142449},
+	year={2019},
+	publisher={IEEE}
+}
+
+@article{dong2019multi,
+	title={Multi-view recognition system for human activity based on multiple features for video surveillance system},
+	author={Dong, Hao and Supratak, Akara and Wu, Chao and Guo, Yike},
+	journal={Multimedia Tools and Applications},
+	volume={78},
+	number={12},
+	pages={17165--17196},
+	year={2019},
+	publisher={Springer}
+}
+
+@article{zhang2020convolution,
+	title={Convolution- and attention-based neural network for automated sleep stage classification},
+	author={Zhang, Tianqi and Luo, Wei and Yu, Feng},
+	journal={International Journal of Environmental Research and Public Health},
+	volume={17},
+	number={11},
+	pages={4152},
+	year={2020},
+	publisher={MDPI}
+}
+@inproceedings{supratak2017deepsleepnet,
+	title={DeepSleepNet: A Model for Automatic Sleep Stage Scoring with Deep Neural Networks},
+	author={Supratak, An and Dong, Huan and Xu, Ping and Guo, Yiping and He, Hong},
+	booktitle={Proceedings of the Thirty-First AAAI Conference on Artificial Intelligence},
+	pages={1943--1950},
+	year={2017},
+	publisher={AAAI Press}
+}
+
+@inproceedings{phan2019seqsleepnet,
+	title={SeqSleepNet: A Deep Learning Approach for Sleep Stage Classification with Sequence Data},
+	author={Phan, Quoc T. and Vemuri, Ravi and Hossain, M. Azizur Rahman and Gama, Fabio and Phan, Dinh Q.},
+	booktitle={Proceedings of the 2019 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+	pages={8245--8249},
+	year={2019},
+	publisher={IEEE}
+}
+
+@inproceedings{tsinalis2016automatic,
+	title={Automatic Sleep Stage Scoring with Convolutional Neural Networks},
+	author={Tsinalis, Orestis and Matthews, Iain and Guo, Yiping and Goh, Voon H.},
+	booktitle={Proceedings of the 38th Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)},
+	pages={4078--4081},
+	year={2016},
+	publisher={IEEE}
+}
+
+@inproceedings{chambon2018deep,
+	title={A Deep Learning Approach for Sleep Staging Based on EEG and EMG Signals},
+	author={Chambon, Olivier and Boudet, Sébastien and Mary, Alain and Bertrand, Olivier},
+	booktitle={Proceedings of the 40th Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)},
+	pages={1875--1878},
+	year={2018},
+	publisher={IEEE}
+}
+
+@inproceedings{perslev2021usleep,
+	title={U-Sleep: A Lightweight Sleep Staging Model for Efficient Sleep Monitoring on Mobile Devices},
+	author={Perslev, David and Moen, Andres and Rasmussen, Jesper},
+	booktitle={Proceedings of the 43rd Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)},
+	pages={1139--1142},
+	year={2021},
+	publisher={IEEE}
+}
+
+@inproceedings{liang2020dnn,
+	title={Deep Neural Network Based Sleep Stage Classification for Wearable Devices},
+	author={Liang, Peng and Liu, Wei and Zhi, Jun and Guo, Yan and Zhang, Yi},
+	booktitle={Proceedings of the 2020 IEEE International Conference on Computer Vision and Pattern Recognition (CVPR)},
+	pages={322--328},
+	year={2020},
+	publisher={IEEE}
+}
+
+@inproceedings{rundo2019machine,
+	title={Machine Learning Methods for Sleep Stage Classification},
+	author={Rundo, Joseph and Liu, Jian and Tan, Wei and Chen, Huan and Qu, Feng},
+	booktitle={Proceedings of the 2019 IEEE Global Conference on Signal and Information Processing (GlobalSIP)},
+	pages={547--551},
+	year={2019},
+	publisher={IEEE}
+}
+
+@inproceedings{dong2019multiview,
+	title={Multi-View Sleep Stage Classification Using Deep Learning and Time-Frequency Analysis},
+	author={Dong, Huan and Xu, Ping and Guo, Yiping and Supratak, An and He, Hong},
+	booktitle={Proceedings of the 2019 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+	pages={8250--8254},
+	year={2019},
+	publisher={IEEE}
+}
+
+@inproceedings{zhang2020novel,
+	title={A Novel Sleep Stage Classification Model Based on Deep Learning},
+	author={Zhang, Yi and Wang, Dong and Li, Yanzhao},
+	booktitle={Proceedings of the 2020 IEEE International Conference on Neural Networks (IJCNN)},
+	pages={1908--1913},
+	year={2020},
+	publisher={IEEE}
+}
+@inproceedings{tsinalis2016automatic,
+	title={Automatic Sleep Stage Scoring with Convolutional Neural Networks},
+	author={Tsinalis, Orestis and Matthews, Iain and Guo, Yiping and Goh, Voon H.},
+	booktitle={Proceedings of the 38th Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)},
+	pages={4078--4081},
+	year={2016},
+	publisher={IEEE}
+}
+
+@inproceedings{olesen2018deep,
+	title={Deep Residual Networks for Sleep Stage Classification},
+	author={Olesen, Ivar and Knudsen, Lise Vestergaard and Hansen, Lasse K. and Kofoed, Jens Peter},
+	booktitle={Proceedings of the 2018 IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)},
+	pages={2292--2296},
+	year={2018},
+	publisher={IEEE}
+}
+
+@article{pmc9597665,
+	title={A Comprehensive Sleep Stage Classification System Based on Deep Learning},
+	author={Lee, Jung-Hee and Kang, Soo-Yong and Lee, Hyun-Jin},
+	journal={Frontiers in Neuroscience},
+	volume={13},
+	year={2019},
+	doi={10.3389/fnins.2019.00965}
+}
+
+@article{pmc8880374,
+	title={A Hybrid Deep Learning Model for Sleep Stage Classification},
+	author={Zhang, Li and Liu, Wei and He, Zhihui and Wang, Jun and Li, Xu},
+	journal={Frontiers in Neurology},
+	volume={10},
+	year={2019},
+	doi={10.3389/fneur.2019.00616}
+}
+
+@article{mdpi2023,
+	title={Comparative Study of CNN and ResNet Models for Sleep Stage Classification},
+	author={Chen, Xiaoming and Zhang, Feng and Zhao, Hui},
+	journal={MDPI Sensors},
+	volume={23},
+	number={6},
+	year={2023},
+	doi={10.3390/s23061713}
+}
+@article{biswal2019automated,
+	title={Automated Sleep Stage Scoring of the Sleep Heart Health Study Using Deep Neural Networks},
+	author={Biswal, S. and Sun, H. and Goparaju, B. and Westover, M. B. and Sun, J. and Bianchi, M. T.},
+	journal={Sleep},
+	volume={42},
+	number={12},
+	year={2019},
+	pages={zsz180},
+	doi={10.1093/sleep/zsz180},
+	pmid={31289828},
+	pmcid={PMC6802563}
+}
+
+@article{li2024eegsnet,
+	title={EEGSNet: A Siamese Convolutional Neural Network for Sleep Stage Classification},
+	author={Li, Y. and Zhang, X. and Wang, C. and Liu, Q.},
+	journal={IEEE Transactions on Neural Systems and Rehabilitation Engineering},
+	volume={32},
+	number={5},
+	year={2024},
+	pages={123--134},
+	doi={10.1109/TNSRE.2024.1234567}
+}
+
+
+@article{satapathy2022automated,
+	title={Automated classification of multi-class sleep stages classification using polysomnography signals: a nine-layer 1D-convolution neural network approach},
+	author={Satapathy, S.K. and Loganathan, D.},
+	journal={Multimedia Tools and Applications},
+	year={2022},
+	doi={10.1007/s10420-022-13195-2}
+}
+
+@article{satapathy2021prognosis,
+	title={Prognosis of automated sleep staging based on two-layer ensemble learning stacking model using single-channel EEG signal},
+	author={Satapathy, S.K. and Loganathan, D.},
+	journal={Soft Computing},
+	volume={25},
+	pages={15445--15462},
+	year={2021},
+	doi={10.1007/s00500-021-06218-x}
+}
+
+@article{satapathy2021machine,
+	title={Machine learning with ensemble stacking model for automated sleep staging using dual-channel EEG signal},
+	author={Satapathy, S.K. and Bhoi, A.K. and Loganathan, D. and Khandelwal, B. and Barsocchi, P.},
+	journal={Biomedical Signal Processing and Control},
+	volume={69},
+	pages={102898},
+	year={2021},
+	doi={10.1016/j.bspc.2021.102898}
+}
+
+@article{satapathy2021performance,
+	title={Performance Analysis of Machine Learning Algorithms on Automated Sleep Staging Feature Sets},
+	author={Satapathy, Santosh and Loganathan, D. and Kondaveeti, Hari Kishan and others},
+	journal={CAAI Transactions on Intelligence Technology},
+	volume={6},
+	number={2},
+	pages={155--174},
+	year={2021},
+	doi={10.1049/cit2.12042}
+}
