--- a/Title/title.tex
+++ b/Title/title.tex
@@ -4,7 +4,7 @@
 	\vspace{0.6cm}
 	
 	{\large A Master's Thesis}\\
-	{\large Submitted in partial fulfillment of the requirement for the award of the degree of}\\
+	{\large Submitted in {\Huge } fulfillment of the requirement for the award of the degree of}\\
 	\vspace{0.8cm}
 	
 	{\large Master of Technology in Artificial Intelligence}\\
