changes of panel

--- a/Title/approval.tex
+++ b/Title/approval.tex
@@ -1,47 +1,29 @@
 \begin{center}
-    \textbf{\large Approval Sheet}
+	\textbf{\large Approval Sheet}
 \end{center}
-	
-This thesis entitled \textbf{\enquote{SleepGCN-Transformer: A Hybrid Graph
-Convolutional and Transformer Network for Sleep
-Stage Classification}} by \textbf{Tanmay Rathod} is recommended for the degree of \textbf{M.Tech} in \textbf{Artificial Intelligence}.
-\vspace{0.8cm}
 
+This thesis entitled \textbf{\enquote{SleepGCN-Transformer: A Hybrid Graph Convolutional and Transformer Network for Sleep Stage Classification}} by \textbf{Tanmay Rathod} is recommended for the degree of \textbf{M.Tech} in \textbf{Artificial Intelligence}.
 
+\vspace{1cm}
 
-\hspace{9cm}  
-\begin{flushright}   
-    \makebox[1.8in]{\hrulefill}\\
-    Guide : Dr Santosh Satapathy, \\
-    Assistant Professor \\
-    Dept. of ICT \\
-  
-\end{flushright}
-\vspace{0.5cm}
-
-
-\hspace{9cm}  
-\begin{flushright}   
-    \makebox[1.8in]{\hrulefill}\\
-    Dr Nitin Singh Rajput, \\
-    Assistant Professor \\
-    Dept. of ICT
-\end{flushright}
-\vspace{0.5cm}
-
-
-
-% \hspace{9cm}\\
-\begin{flushright}
-    \makebox[1.8in]{\hrulefill}\\
-    Dr. Paawan Sharma,\\
-    Head Of Department \\ 
-    Dept. of ICT
-\end{flushright}
+\begin{table}[h!]
+	\centering
+	\begin{tabular}{@{}m{0.45\textwidth}<{\centering} m{0.45\textwidth}<{\centering}@{}}
+		\textbf{Guide} & \textbf{Panel Members} \\[4em]
+		\rule{0.4\textwidth}{0.4pt} & \rule{0.4\textwidth}{0.4pt} \\[1em]
+		Dr. Santosh Satapathy, & Member 1, \\[1em]
+		Assistant Professor, & Designation, \\[1em]
+		Dept. of ICT & Dept. of ICT \\[2em]
+		\textbf{Head of Department} & \\ [4em]
+		\rule{0.4\textwidth}{0.4pt} & \rule{0.4\textwidth}{0.4pt} \\[1em]
+		Dr. Paawan Sharma & Member 2, \\[1em]
+		HoD, Dept. of ICT, & Designation,\\[1em]
+		School of Technology & Designation\\[1em]
+	\end{tabular}
+\end{table}
 
 \vfill
 \begin{flushleft}
-    Date: \makebox[1.8in]{\hrulefill}\\
-    Place: \makebox[1.8in]{\hrulefill}\\    
+	Date: \makebox[1.8in]{\hrulefill}\\
+	Place: \makebox[1.8in]{\hrulefill}\\    
 \end{flushleft}
-
