--- a/Title/acknowledgement.tex
+++ b/Title/acknowledgement.tex
@@ -1,15 +1,15 @@
-%\begin{center}
-%\textbf{\large Acknowledgment}
-%\end{center} 
 \section*{\textcolor{internationalkleinblue}{\textbf{Acknowledgment}}}
- While my name appears as the sole contributor to the completion of this summer internship, it is important to recognize that the guidance and support of many individuals played a significant role in its success. This internship is the result of a collective effort, shaped by the contributions of numerous people, to whom I am deeply grateful.
 
- I extend my heartfelt appreciation to my internal guide, Dr. Santosh Kumar Satapathy
-Author, for his consistent guidance, encouragement, and insightful suggestions throughout this internship. His belief in my abilities provided the confidence and motivation necessary to complete this project. Dr. Santosh Kumar Satapathy
-Author’s support, along with his generous provision of time and access to resources, was instrumental in achieving the objectives of this internship.
+Although this thesis bears only my name as the author, its successful completion is the result of the support, guidance, and encouragement of several individuals to whom I am deeply grateful.
 
- I am also profoundly thankful for the unwavering support of my parents. Their continuous inspiration, moral backing, and blessings have been the cornerstone of my journey. Their understanding and encouragement have been invaluable, and I am truly fortunate to have had their steadfast support throughout this endeavor.
+First and foremost, I would like to express my sincere gratitude to my internal guide, Dr. Santosh Kumar Satapathy, from Pandit Deendayal Energy University (PDEU), for his unwavering support throughout the course of this project. His valuable insights, constructive feedback, and continuous encouragement were instrumental in shaping the direction of this research and overcoming various challenges.
+
+I also acknowledge the faculty members and staff of the M.Tech in Artificial Intelligence program at PDEU for providing a stimulating academic environment and the foundational knowledge that enabled me to undertake this work.
+
+Finally, I extend heartfelt thanks to my family and friends for their constant encouragement, patience, and moral support throughout this journey.
+
+This thesis would not have been possible without the collective contributions of these individuals, and I remain truly thankful to all.
+
 \begin{flushright}
-\textbf{Tanmay Rathod}\\
+	\textbf{Tanmay Rathod}\\
 \end{flushright}
-
