--- a/Title/approval.tex
+++ b/Title/approval.tex
@@ -9,16 +9,22 @@ This thesis entitled \textbf{\enquote{SleepGCN-Transformer: A Hybrid Graph Convo
 \begin{table}[h!]
 	\centering
 	\begin{tabular}{@{}m{0.45\textwidth}<{\centering} m{0.45\textwidth}<{\centering}@{}}
-		\textbf{Guide} & \textbf{Panel Members} \\[4em]
-		\rule{0.4\textwidth}{0.4pt} & \rule{0.4\textwidth}{0.4pt} \\[1em]
-		Dr. Santosh Satapathy, & Member 1, \\[1em]
-		Assistant Professor, & Designation, \\[1em]
-		Dept. of ICT & Dept. of ICT \\[2em]
-		\textbf{Head of Department} & \\ [4em]
-		\rule{0.4\textwidth}{0.4pt} & \rule{0.4\textwidth}{0.4pt} \\[1em]
-		Dr. Paawan Sharma & Member 2, \\[1em]
-		HoD, Dept. of ICT, & Designation,\\[1em]
-		School of Technology & Designation\\[1em]
+		\textbf{Expert 1} & \textbf{Expert 2} \\[2.5em]
+		\rule{0.35\textwidth}{0.4pt} & \rule{0.35\textwidth}{0.4pt} \\[0.5em]
+		Mr. Nilesh Ranpura & Dr. Hridoy Sankar Dutta \\[0.5em]
+		Director of Engineering, & Lecturer (Assistant Professor), \\[0.5em]
+		Arrow Inc. (E-Infochips) & Deakin University \\[3em]
+	\end{tabular}
+\end{table}
+
+\begin{table}[h!]
+	\centering
+	\begin{tabular}{@{}m{0.31\textwidth}<{\centering} m{0.31\textwidth}<{\centering} m{0.31\textwidth}<{\centering}@{}}
+		\textbf{Guide} & \textbf{Head of Department} & \textbf{Director} \\[2.5em]
+		\rule{0.25\textwidth}{0.4pt} & \rule{0.25\textwidth}{0.4pt} & \rule{0.25\textwidth}{0.4pt} \\[0.5em]
+		Dr. Santosh Satapathy & Dr. Paawan Sharma & Prof.(Dr.) Dhaval Pujara \\[0.5em]
+		Assistant Professor, & HoD, Dept. of ICT, & Director, \\[0.5em]
+		Dept. of ICT & School of Technology & School of Technology \\
 	\end{tabular}
 \end{table}
 
